# sakanaa.moe

./: .gitignore  Cargo.toml  gulpfile.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
config/: default.toml  default.yml
public/: genpalettes.py  index.html
public/js/: colors.js  discord.js  misskey.js  tabs.js
src/: config.rs  dyn_component.rs  lib.rs  main.rs  pages.rs  response_helpers.rs  website.rs
src/api/: mod.rs
src/api/discord/: lanyard.rs  mod.rs  types.rs
src/api/lastfm/: mod.rs  requests.rs  types.rs
src/api/misskey/: mod.rs  requests.rs  types.rs
src/api/musicbrainz/: mod.rs  requests.rs  types.rs
src/components/: big_waifu.rs  colorfilter.rs  filtered_image.rs  mod.rs  section.rs
src/components/sections/: about_me.rs  hardware.rs  microblogging.rs  mod.rs  music.rs  navigation.rs  site_controls.rs
src/components/sections/live_activity/: component.rs  lanyard.rs  mod.rs  render.rs  types.rs
src/components/sections/music/: component.rs  mod.rs  music_upper.rs
src/components/zerox20/: mod.rs  zerox20_button.rs
src/db/: connected_db.rs  mod.rs
src/db/music/: audio_lookup_pipeline.rs  audio_processing.rs  mod.rs  music_db_ext.rs  music_lookup_pipeline.rs  types.rs
src/db/music/audio_lookup_pipeline/: fs_library_source.rs  musicbrainz_sources.rs
src/db/music/audio_processing/: bpm.rs  metadata.rs  mod.rs
src/db/music/music_lookup_pipeline/: fs_library_source.rs  musicbrainz_sources.rs
src/page/: index.html
src/page/css/: style.css
src/page/js/: colors.js  discord.js  lastfm.js  mouse.js  tabs.js  uptime.js
src/server/: index.ts  lastfm.ts  misskey.d.ts  server.ts  uptimerobot.d.ts
src/server/music/: lastfm.ts  musicbrainz.ts  trackdb.ts  tracktypes.ts
static/: index.html
static/css/: style.css
static/js/: !palettes.js  0x20.js  colors.js  uptime.js
