[package]
name = "sakanaa_web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.14", features = ["toml"] }
lazy_static = "1"
maud = "0.26"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_regex = "1.1.0"
simple-error = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
